# esp32-osc-cv

./: Cargo.toml  build.rs  rust-analyzer.toml  sdkconfig.defaults
src/: dac.rs  main.rs  wifi.rs
