[package]
name = "esp32-osc-cv"
version = "0.1.0"
authors = ["Siarhei Lunski <loonskai@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "esp32-osc-cv"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync", "std", "alloc"] }
esp-idf-hal = "0.46"
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
anyhow = "1"
rosc = "0.10"

[build-dependencies]
embuild = "0.33"
toml = "0.8"
